--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
             <a class="nav-link" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#features">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#controls">Controls</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
@@ -52,7 +58,53 @@
     </div>
   </section>
 
-  <!-- Add more sections for your projects, gameplay details, etc. -->
+  <section id="projects" class="bg-light py-5">
+    <div class="container">
+      <h2 class="mb-4">Projects</h2>
+      <div class="row">
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">Portfolio Website</h3>
+              <p class="card-text">Just Like this one.</p>
+              <a href="#" class="btn btn-primary">View Project</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">Hotel ERP</h3>
+              <p class="card-text">Coming Soon.</p>
+              <a href="#" class="btn btn-primary">View Project</a>
+            </div>
+          </div>
+        </div>
+        <!-- Add more project sections as needed -->
+      </div>
+    </div>
+  </section>
+
+  <section id="features" class="py-5">
+    <div class="container">
+      <h2 class="mb-4">Game Features</h2>
+      <p>
+        Explore the exciting features of Escape Maze, including multiple levels, challenging obstacles, and more.
+      </p>
+      <!-- Add more content as needed -->
+    </div>
+  </section>
+
+  <section id="controls" class="bg-light py-5">
+    <div class="container">
+      <h2 class="mb-4">Game Controls</h2>
+      <p>
+        Learn how to navigate through the maze with intuitive controls. Use arrow keys for a seamless gaming experience.
+      </p>
+      <!-- Add more content as needed -->
+    </div>
+  </section>
+
 
   <section id="contact" class="py-5">
     <div class="container">
